--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="questions_asked">Задано вопросов: 0</string>
     <string name="right_answers">Правильных ответов: 0</string>
 
+    <!--    О приложении -->
+    <string name="about">Это простое приложение создано исключительно в учебно-ознакомительных целях.
+        \nЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
+    \nВопросы содержат проверку знаний английского из разных областей языка.
+        \nВ планах добавить новые вопросы + поэкспериментировать и добавить новый функционал.
+    \nОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
+
 </resources>
