--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="about">Это простое приложение создано исключительно в учебно-ознакомительных целях.
         \nЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
     \nВопросы содержат проверку знаний английского из разных областей языка.
-        \nВ планах добавить новые вопросы + поэкспериментировать и добавить новый функционал.
+        \nВ планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
     \nОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
 
 </resources>
