--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <!--    О приложении -->
     <string name="about">Это простое приложение создано исключительно в учебно-ознакомительных целях.
         \nЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
-    \nТест содержит вопросы из разных тем английского языка и ориентирован на уровень "средний" и выше.
+    \nТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
         \nВ планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
     \nОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
 
