--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,14 @@
     <string name="finish_button">Закончить</string>
 
     <!--    Количество правильных ответов -->
-    <string name="questions_asked">Задано вопросов: 0</string>
+    <string name="questions_asked">Дано ответов: 0</string>
     <string name="right_answers">Правильных ответов: 0</string>
 
     <!--    О приложении -->
-    <string name="about">Это простое приложение создано исключительно в учебно-ознакомительных целях.
-        \nЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
-    \nТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
-        \nВ планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
-    \nОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
+    <string name="about">  Это простое приложение создано исключительно в учебно-ознакомительных целях.
+        \n  Здесь вы не увидите раздражающей рекламы и навязчивого платного контента.
+    \n  Тест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
+        \n  В планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
+    \n  Обо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
 
 </resources>
