--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,14 @@
     <string name="right_answers">Правильных ответов: 0</string>
 
     <!--    О приложении -->
-    <string name="about">  Это простое приложение создано исключительно в учебно-ознакомительных целях.
-        \n  Здесь вы не увидите раздражающей рекламы и навязчивого платного контента.
-    \n  Тест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
-        \n  В планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
-    \n  Обо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
+    <string name="about">\tЭто простое приложение создано исключительно в учебно-ознакомительных целях.
+        \n
+        \n\tЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
+        \n
+    \n\tТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
+        \n
+        \n\tВ планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
+        \n
+    \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
 
 </resources>
