add new questions, 10 random questions, fix progress bar, remove odd text view, refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="exit_button">В меню</string>
     <string name="finish_button">Закончить</string>
 
-    <!--    Количество правильных ответов -->
-    <string name="questions_asked">Дано ответов: 0</string>
+    <!--    Количество ответов -->
+    <string name="questions_asked">Ответов: 0/10</string>
     <string name="right_answers">Правильных ответов: 0</string>
 
     <!--    О приложении -->
@@ -21,8 +21,8 @@
         \n
     \n\tТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
         \n
-        \n\tВ планах увеличить количество вопросов + поэкспериментировать и добавить новый функционал.
+        \n\tПостепенно увеличиваю количество вопросов и экспериментирую, добавляю новый функционал.
         \n
-    \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно смело писать на yudin5@yandex.ru</string>
+    \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно писать на yudin5@yandex.ru</string>
 
 </resources>
