add pseudo random

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
         \n
     \n\tТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
         \n
-        \n\tПостепенно увеличиваю количество вопросов и экспериментирую, добавляю новый функционал.
+        \n\tПостепенно увеличивается количество вопросов, добавляется новый функционал.
         \n
     \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно писать на yudin5@yandex.ru</string>
 
