--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,15 +15,22 @@
     <string name="right_answers">Правильных ответов: 0</string>
 
     <!--    О приложении -->
-    <string name="about">\tЭто простое приложение создано исключительно в учебно-ознакомительных целях.
+    <string name="about">\tЭто простое приложение создано исключительно в учебных целях.
         \n
         \n\tЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
         \n
     \n\tТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
+        \nВсе задания в приложении основаны на вопросах по грамматике и лексике из
+        \nTelegram-канала https://t.me/yudinalyudmila
+        \nи блога
+        \nВКонтакте https://vk.com/club211384923
+        \nПрисоединяйтесь!
         \n
-        \n\tПостепенно увеличивается количество вопросов, добавляется новый функционал.
+        \n\tПриложение не требует интернета, поэтому может работать в метро, на горе Эверест, в подводной лодке и даже на Луне.
+        \nНичто не должно вас останавливать в изучении английского.
         \n
-    \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно писать на yudin5@yandex.ru</string>
+    \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно писать на yudin5@yandex.ru
+    \n\tУспехов!</string>
 
     <!-- Статистика -->
     <string name="stats_correct_answers">Количество правильных ответов: </string>
