--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,12 +16,10 @@
 
     <!--    О приложении -->
     <string name="about">\tЭто простое приложение создано исключительно в учебных целях.
-        \n
         \n\tЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
         \n
-    \n\tТест содержит вопросы из разных тем английского языка и ориентирован на уровень \"средний\" и выше.
-        \nВсе задания в приложении основаны на вопросах по грамматике и лексике из
-        \nTelegram-канала https://t.me/yudinalyudmila
+        \n\tВсе задания в приложении основаны на вопросах по грамматике и лексике из
+        \n\tTelegram-канала https://t.me/yudinalyudmila
         \nи блога
         \nВКонтакте https://vk.com/club211384923
         \nПрисоединяйтесь!
