--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,14 +18,14 @@
     <string name="about">\tЭто простое приложение создано исключительно в учебных целях.
         \n\tЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
         \n
-        \n\tВсе задания в приложении основаны на вопросах по грамматике и лексике из
-        \n\tTelegram-канала https://t.me/yudinalyudmila
+        \n\tВсе задания в приложении основаны на вопросах по грамматике и лексике из Telegram-канала
+        \nhttps://t.me/yudinalyudmila
         \nи блога
         \nВКонтакте https://vk.com/club211384923
         \nПрисоединяйтесь!
         \n
         \n\tПриложение не требует интернета, поэтому может работать в метро, на горе Эверест, в подводной лодке и даже на Луне.
-        \nНичто не должно вас останавливать в изучении английского.
+        Ничто не должно вас останавливать в изучении английского.
         \n
     \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно писать на yudin5@yandex.ru
     \n\tУспехов!</string>
