fix description, change link color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,11 @@
     <string name="about">\tЭто простое приложение создано исключительно в учебных целях.
         \n\tЗдесь вы не увидите раздражающей рекламы и навязчивого платного контента.
         \n
-        \n\tВсе задания в приложении основаны на вопросах по грамматике и лексике из
-        \nTelegram-канала https://t.me/yudinalyudmila
-        \nи блога ВКонтакте https://vk.com/club211384923
+        \n\tВсе задания в приложении основаны на вопросах по грамматике и лексике
+        \nиз Telegram-канала
+        \nhttps://t.me/yudinalyudmila
+        \nи блога ВКонтакте
+        \nhttps://vk.com/club211384923
         \nПрисоединяйтесь!
         \n
         \n\tПриложение не требует интернета, поэтому может работать в метро, на горе Эверест, в подводной лодке и даже на Луне.
