--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,12 @@
         \nhttps://t.me/yudinalyudmila
         \nи блога ВКонтакте
         \nhttps://vk.com/club211384923
-        \nПрисоединяйтесь!
+        \n\tПрисоединяйтесь!
         \n
         \n\tПриложение не требует интернета, поэтому может работать в метро, на горе Эверест, в подводной лодке и даже на Луне.
         Ничто не должно вас останавливать в изучении английского.
         \n
-    \n\tОбо всех неточностях, пожеланиях, замечаниях и тому подобном можно писать на yudin5@yandex.ru
+    \n\tСвои пожелания и замечания можно отправлять на yudin5@yandex.ru
     \n\tУспехов!</string>
 
     <!-- Статистика -->
