--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
         \n\tПриложение не требует интернета, поэтому может работать в метро, на горе Эверест, в подводной лодке и даже на Луне.
         Ничто не должно вас останавливать в изучении английского.
         \n
-    \n\tСвои пожелания и замечания можно отправлять на yudin5@yandex.ru
+    \n\tСвои пожелания и замечания можно направлять на yudin5@yandex.ru
     \n\tУспехов!</string>
 
     <!-- Статистика -->
